# lab_2

./: .gitignore  CMakeLists.txt  Lab2.sln  Lab2.xlsx  README.md  Отчёт ЛР2 Кочкин В.Р. Фиб-3301.docx
task1/: task1.cpp  task1.vcxproj
task2/: task2.cpp  task2.vcxproj
task3/: task3.cpp  task3.vcxproj
task4/: task4.cpp  task4.vcxproj
